manifests/glance/glance.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: glance
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance-deployment
  namespace: glance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      containers:
        - name: glance
          image: docker.io/glanceapp/glance:v0.8.5
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /app/config
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: glance-config
---
apiVersion: v1
kind: Service
metadata:
  name: glance-service
  namespace: glance
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 8080
      port: 8080
      protocol: TCP
  selector:
    app: glance
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance-httproute
  namespace: glance
spec:
  parentRefs:
    - kind: ListenerSet
      name: glance
      namespace: glance
  hostnames:
  - glance.wcfm.me
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: glance-service
      port: 8080
